cross_platform = 2to3 \
		7z \
		a2x \
		abook \
		aclocal \
		acpi \
		_adb \
		add_members \
		alias \
		ant \
		apache2ctl \
		appdata-validate \
		apt-build \
		apt-cache \
		apt-get \
		apt-mark \
		aptitude \
		arch \
		_argc \
		arp \
		arping \
		arpspoof \
		asciidoc \
		aspell \
		autoconf \
		automake \
		autoreconf \
		autorpm \
		autoscan \
		avahi-browse \
		avctrl \
		badblocks \
		bind \
		bk \
		brctl \
		btdownloadheadless.py \
		bts \
		bzip2 \
		_cal \
		cancel \
		_cargo \
		cardctl \
		carton \
		ccache \
		ccze \
		cd \
		cfagent \
		cfrun \
		chage \
		change_pw \
		check_db \
		check_perms \
		checksec \
		chflags \
		_chfn \
		chgrp \
		chkconfig \
		chmod \
		chown \
		chpasswd \
		chromium-browser \
		chronyc \
		chrpath \
		_chsh \
		cksfv \
		cleanarch \
		clisp \
		clone_member \
		_coder \
		complete \
		config_list \
		configure \
		convert \
		cowsay \
		cpan2dist \
		cpio \
		cppcheck \
		crontab \
		cryptsetup \
		curl \
		cvs \
		cvsps \
		dd \
		declare \
		deja-dup \
		_delta \
		desktop-file-validate \
		dhclient \
		dict \
		_dmesg \
		dmypy \
		dnssec-keygen \
		dnsspoof \
		dot \
		dpkg \
		dpkg-source \
		dselect \
		dsniff \
		dumpdb \
		dumpe2fs \
		e2freefrag \
		e2label \
		ebtables \
		ecryptfs-migrate-home \
		_eject \
		env \
		eog \
		ether-wake \
		evince \
		explodepkg \
		export \
		faillog \
		fbgs \
		fbi \
		feh \
		file \
		file-roller \
		filefrag \
		filesnarf \
		find \
		find_member \
		fio \
		firefox \
		flake8 \
		_flamegraph \
		fprintd-delete \
		fprintd-enroll \
		freeciv \
		freeciv-server \
		function \
		fusermount \
		_gaiacli \
		gcc \
		gcl \
		gdb \
		genaliases \
		gendiff \
		genisoimage \
		geoiplookup \
		getconf \
		getent \
		_gh \
		gkrellm \
		gm \
		gnatmake \
		gnokii \
		gnome-mplayer \
		gnome-screenshot \
		_golangci-lint \
		gpasswd \
		gpg \
		gpg2 \
		gpgv \
		gphoto2 \
		gprof \
		groupadd \
		groupdel \
		groupmems \
		groupmod \
		growisofs \
		grpck \
		_gsctl \
		gssdp-discover \
		gzip \
		hash \
		hcitool \
		hddtemp \
		help \
		_hexdump \
		hid2hci \
		hostname \
		hping2 \
		htop \
		htpasswd \
		hunspell \
		_hwclock \
		iconv \
		id \
		idn \
		ifstat \
		iftop \
		ifup \
		influx \
		info \
		inject \
		inotifywait \
		_insmod \
		installpkg \
		interdiff \
		invoke-rc.d \
		_ionice \
		ip \
		ipcalc \
		iperf \
		ipmitool \
		ipsec \
		iptables \
		ipv6calc \
		iscsiadm \
		isort \
		isql \
		iwconfig \
		iwlist \
		iwpriv \
		iwspy \
		jar \
		jarsigner \
		java \
		javaws \
		_jj \
		jq \
		jpegoptim \
		jps \
		jshint \
		json_xs \
		jsonschema \
		_jungle \
		k3b \
		kcov \
		_keyring \
		kill \
		killall \
		koji \
		_kontena \
		ktutil \
		larch \
		lastlog \
		ldapsearch \
		ldapvi \
		lftp \
		lftpget \
		lilo \
		links \
		lintian \
		lisp \
		list_admins \
		list_lists \
		list_members \
		list_owners \
		_look \
		locale-gen \
		lpq \
		lpr \
		lrzip \
		lsof \
		lsscsi \
		lsusb \
		lua \
		luac \
		luseradd \
		luserdel \
		lvm \
		lz4 \
		lzip \
		lzma \
		lzop \
		macof \
		mailmanctl \
		make \
		makepkg \
		man \
		mc \
		mcrypt \
		mdadm \
		_mdbook \
		mdtool \
		medusa \
		mfiutil \
		mii-diag \
		mii-tool \
		minicom \
		mkinitrd \
		mktemp \
		mmsitepass \
		_mock \
		_modinfo \
		_modprobe \
		_modules \
		monodevelop \
		_mount \
		_mount.linux \
		mplayer \
		mr \
		msynctool \
		_mtr \
		mtx \
		munindoc \
		munin-node-configure \
		munin-run \
		munin-update \
		mussh \
		mutt \
		mypy \
		mysql \
		mysqladmin \
		nc \
		ncftp \
		nethogs \
		_newgrp \
		newlist \
		newusers \
		ngrep \
		nload \
		nmap \
		_nmcli \
		_nox \
		nproc \
		nslookup \
		nsupdate \
		ntpdate \
		_nvm \
		oggdec \
		openssl \
		opera \
		optipng \
		p4 \
		pack200 \
		passwd \
		patch \
		pdftoppm \
		pdftotext \
		perl \
		perlcritic \
		perltidy \
		pgrep \
		pidof \
		pine \
		ping \
		_pip \
		_pipenv \
		pkg-config \
		pkg-get \
		pkgadd \
		pkgrm \
		pkgtool \
		plague-client \
		pm-hibernate \
		pm-is-supported \
		pm-powersave \
		pngfix \
		postcat \
		postconf \
		postfix \
		postmap \
		postsuper \
		povray \
		prelink \
		printenv \
		protoc \
		ps \
		psql \
		puppet \
		pv \
		pwck \
		pwd \
		pwdx \
		pwgen \
		pycodestyle \
		pydoc \
		pydocstyle \
		pyflakes \
		pylint \
		pytest \
		python \
		pyvenv \
		qdbus \
		qemu \
		qrunner \
		querybts \
		quota \
		radvdump \
		rcs \
		rdesktop \
		remove_members \
		removepkg \
		_renice \
		_repomanage \
		reportbug \
		_reptyr \
		resolvconf \
		_rfkill \
		_rg \
		ri \
		rmlist \
		_rmmod \
		route \
		rpcdebug \
		rpm \
		rpm2tgz \
		rpmcheck \
		rrdtool \
		rsync \
		_rtcwake \
		_ruff \
		_runuser \
		_rustup \
		sbcl \
		sbopkg \
		screen \
		scrub \
		_secret-tool \
		set \
		sh \
		sha256sum \
		shellcheck \
		sitecopy \
		slabtop \
		_slackpkg \
		slapt-get \
		slapt-src \
		smartctl \
		smbclient \
		snownews \
		_sops \
		sqlite3 \
		ss \
		ssh \
		ssh-add \
		ssh-copy-id \
		ssh-keygen \
		ssh-keyscan \
		sshfs \
		sshmitm \
		sshow \
		_stern \
		strace \
		_stripe \
		strings \
		_su \
		sudo \
		svcadm \
		svk \
		_svn \
		_svnadmin \
		_svnlook \
		sync_members \
		synclient \
		sysbench \
		sysctl \
		tar \
		_task \
		tcpdump \
		tcpkill \
		tcpnice \
		timeout \
		tipc \
		_tokio-console \
		tox \
		tracepath \
		tree \
		truncate \
		tshark \
		tsig-keygen \
		tune2fs \
		_udevadm \
		ulimit \
		_umount \
		_umount.linux \
		unace \
		unpack200 \
		unrar \
		unshunt \
		update-alternatives \
		update-rc.d \
		upgradepkg \
		urlsnarf \
		useradd \
		userdel \
		usermod \
		_uvx \
		valgrind \
		_vault \
		vipw \
		vmstat \
		vncviewer \
		vpnc \
		_wasmer \
		watch \
		webmitm \
		wget \
		wine \
		withlist \
		wodim \
		wol \
		_write \
		wsimport \
		wtf \
		wvdial \
		xdg-mime \
		xdg-settings \
		xev \
		xfreerdp \
		xgamma \
		xhost \
		_xm \
		xmllint \
		xmlwf \
		xmms \
		xmodmap \
		xrandr \
		xrdb \
		xsltproc \
		xvfb-run \
		xxd \
		xz \
		xzdec \
		ypmatch \
		_yq \
		_yum \
		yum-arch \
		zopfli \
		zopflipng

solaris_extra = pkgutil

bsd_extra = pkg_delete

freebsd_extra = \
		freebsd-update \
		kldload \
		kldunload \
		portinstall \
		portsnap \
		portupgrade

# We include all the files in the tarball
EXTRA_DIST = $(cross_platform) \
	     $(solaris_extra) \
	     $(bsd_extra) \
	     $(freebsd_extra)

bashcompdir = $(datadir)/$(PACKAGE)/completions
bashcomp_DATA = $(cross_platform)
# We add only the completions that are relevant for the current platform we're
# installing on.
if SOLARIS
bashcomp_DATA += $(solaris_extra)
endif
if BSD
bashcomp_DATA += $(bsd_extra)
endif
if FREEBSD
bashcomp_DATA += $(freebsd_extra)
endif

CLEANFILES = \
	7za \
	7zr \
	7zz \
	7zzs \
	aclocal-1.10 \
	aclocal-1.11 \
	aclocal-1.12 \
	aclocal-1.13 \
	aclocal-1.14 \
	aclocal-1.15 \
	aclocal-1.16 \
	_airflow \
	_allero \
	_alp \
	alpine \
	alternatives \
	animate \
	_ansible \
	_ansible-config \
	_ansible-console \
	_ansible-doc \
	_ansible-galaxy \
	_ansible-inventory \
	_ansible-playbook \
	_ansible-pull \
	_ansible-vault \
	apropos \
	aptitude-curses \
	_apko \
	_aqua \
	_arduino-cli \
	_argo \
	arm-koji \
	asciidoc.py \
	_atlas \
	_atmos \
	autoheader \
	automake-1.10 \
	automake-1.11 \
	automake-1.12 \
	automake-1.13 \
	automake-1.14 \
	automake-1.15 \
	automake-1.16 \
	autossh \
	autoupdate \
	avahi-browse-domains \
	_bao \
	_bashbot \
	_black \
	_blackd \
	bmake \
	_bosh \
	bsdtar \
	btdownloadcurses.py \
	btdownloadgui.py \
	_buf \
	c++ \
	_caddy \
	cc \
	cdrecord \
	_chamber \
	_changie \
	_chezmoi \
	chrome \
	chromium \
	ci \
	_cilium \
	ciptool \
	civclient \
	civserver \
	_cloudquery \
	_clusterctl \
	clzip \
	_cmctl \
	co \
	_colima \
	colormake \
	compare \
	compgen \
	composite \
	_conda \
	_conform \
	_conftest \
	conjure \
	_constellation \
	_consul \
	_container-structure-test \
	_cosign \
	cowthink \
	_crane \
	_crc \
	createdb \
	createuser \
	_crictl \
	_ctlptl \
	_cue \
	_cz \
	_dagger \
	_dapr \
	_dasel \
	_datree \
	dcop \
	_deck \
	_depot \
	_devspace \
	_deno \
	dfutool \
	_diesel \
	display \
	_dlv \
	_docker \
	dpkg-deb \
	dpkg-query \
	dpkg-reconfigure \
	_dprint \
	_driftctl \
	dropdb \
	dropuser \
	_dyff \
	_esc \
	edquota \
	etherwake \
	f77 \
	f95 \
	filebucket \
	firefox-esr \
	_flask \
	_flux \
	fprintd-list \
	fprintd-verify \
	freeciv-gtk2 \
	freeciv-gtk3 \
	freeciv-sdl \
	freeciv-xaw \
	_furyctl \
	_fx \
	g++ \
	g++-5 \
	g++-6 \
	g++-7 \
	g++-8 \
	g4 \
	g77 \
	g95 \
	_gaiad \
	_gardenctl \
	gcc-5 \
	gcc-6 \
	gcc-7 \
	gcc-8 \
	gccgo \
	gccgo-5 \
	gccgo-6 \
	gccgo-7 \
	gccgo-8 \
	gcj \
	_gcrane \
	geoiplookup6 \
	gfortran \
	gfortran-5 \
	gfortran-6 \
	gfortran-7 \
	gfortran-8 \
	_gh-label \
	_ghorg \
	_git-bump \
	_gitconfig \
	_gitleaks \
	_gitsign \
	gkrellm2 \
	_glen \
	_glow \
	gmake \
	gmplayer \
	gnumake \
	_go-licenses \
	google-chrome \
	google-chrome-stable \
	_gopass \
	_gopherjs \
	_goreleaser \
	gpc \
	gpgv2 \
	_grype \
	gssdp-device-sniffer \
	gtar \
	_gup \
	hciattach \
	hciconfig \
	hd \
	_helm \
	_helmfile \
	host \
	_hostctl \
	hping \
	hping3 \
	_httpx \
	_hugo \
	iceweasel \
	identify \
	ifdown \
	ifquery \
	ifstatus \
	_ignite \
	_imgpkg \
	import \
	_incus \
	_infracost \
	inotifywatch \
	_insmod.static \
	iperf3 \
	_istioctl \
	javac \
	javadoc \
	_just \
	_jwt \
	_k0sctl \
	_k3d \
	_k3s \
	_k3sup \
	_k6 \
	_k9s \
	_kafkactl \
	_kapp \
	_kata-runtime \
	_kconf \
	_kind \
	_kn \
	_ko \
	_kompose \
	_kool \
	_kops \
	kplayer \
	_krane \
	_kratos \
	_kube-capacity \
	_kube-linter \
	_kubeadm \
	_kubebuilder \
	_kubecm \
	_kubectl \
	_kubectl-argo-rollouts \
	_kubectl-kuttl \
	_kubescape \
	_kubelogin \
	_kubemqctl \
	_kubesec \
	_kubeshark \
	_kubespy \
	_kustomize \
	_kyverno \
	l2ping \
	lbzip2 \
	ldapadd \
	ldapcompare \
	ldapdelete \
	ldapmodify \
	ldapmodrdn \
	ldappasswd \
	ldapwhoami \
	_lefthook \
	_limactl \
	_linkerd \
	links2 \
	lintian-info \
	lua50 \
	lua5.0 \
	lua51 \
	lua5.1 \
	lua52 \
	lua5.2 \
	lua53 \
	lua5.3 \
	lua54 \
	lua5.4 \
	luac50 \
	luac5.0 \
	luac51 \
	luac5.1 \
	luac52 \
	luac5.2 \
	luac53 \
	luac5.3 \
	luac54 \
	luac5.4 \
	lusermod \
	lvchange \
	lvcreate \
	lvdisplay \
	lvextend \
	lvmdiskscan \
	lvreduce \
	lvremove \
	lvrename \
	lvresize \
	lvs \
	lvscan \
	lz4c \
	mailsnarf \
	_mattermost \
	_melange \
	md5sum \
	mdecrypt \
	mencoder \
	_metalctl \
	micropython \
	_minikube \
	_minishift \
	_mise \
	mkisofs \
	_mmctl \
	_mockery \
	mogrify \
	_moldy \
	montage \
	mozilla-firefox \
	mplayer2 \
	mrsasutil \
	msgsnarf \
	_multi-gitter \
	muttng \
	ncal \
	neomutt \
	_nerdctl \
	_nfpm \
	_ngrok \
	_nomad \
	_notation \
	_nova \
	_npm \
	_oc \
	_odo \
	_okteto \
	_op \
	_opa \
	_oras \
	_ory \
	_packer \
	pbzip2 \
	pccardctl \
	pdlzip \
	perldoc \
	phing \
	pigz \
	pinfo \
	ping4 \
	ping6 \
	_pip3 \
	_pitchfork \
	pkg_deinstall \
	pkg_info \
	pkgconf \
	pkill \
	_pluto \
	plzip \
	pm-suspend \
	pm-suspend-hybrid \
	pmake \
	_polygon-edge \
	_popeye \
	postalias \
	ppc-koji \
	_pulumi \
	puppetca \
	puppetd \
	puppetdoc \
	puppetmasterd \
	puppetqd \
	puppetrun \
	pushd \
	pvchange \
	pvcreate \
	pvdisplay \
	pvmove \
	pvremove \
	pvs \
	pvscan \
	_px \
	pxz \
	py.test \
	py.test-2 \
	py.test-3 \
	pydoc3 \
	pylint-2 \
	pylint-3 \
	pypy \
	pypy3 \
	pyston \
	pyston3 \
	pytest-2 \
	pytest-3 \
	python2 \
	python2.7 \
	python3 \
	python3.3 \
	python3.4 \
	python3.5 \
	python3.6 \
	python3.7 \
	python3.8 \
	python3.9 \
	python3.10 \
	python3.11 \
	python3.12 \
	python3.13 \
	pyvenv-3.4 \
	pyvenv-3.5 \
	pyvenv-3.6 \
	pyvenv-3.7 \
	pyvenv-3.8 \
	pyvenv-3.9 \
	pyvenv-3.10 \
	pyvenv-3.11 \
	pyvenv-3.12 \
	pyvenv-3.13 \
	qemu-kvm \
	qemu-system-i386 \
	qemu-system-x86_64 \
	_qrpc \
	quotacheck \
	quotaoff \
	quotaon \
	ralsh \
	_random \
	_rclone \
	rcsdiff \
	rdict \
	_regal \
	_regctl \
	repquota \
	rfcomm \
	rlog \
	rpm2targz \
	rpm2txz \
	rpmbuild \
	rpmbuild-md5 \
	_rustic \
	s390-koji \
	sbcl-mt \
	scp \
	sdptool \
	_sentry-cli \
	setquota \
	sftp \
	shasum \
	sha1sum \
	sha224sum \
	sha384sum \
	sha512sum \
	sidedoor \
	_sinker \
	_skaffold \
	slogin \
	_slsa-verifier \
	smbcacls \
	smbcquotas \
	smbget \
	smbpasswd \
	smbtar \
	smbtree \
	_sopstool \
	_spacectl \
	sparc-koji \
	spovray \
	_sshi \
	_ssh-inscribe \
	star \
	_starship \
	_steampipe \
	stream \
	sudoedit \
	_syft \
	_talhelper \
	_tanzu \
	_tanzu-core \
	_tctl \
	_tendermint \
	_terraform \
	_tfctl \
	_tilt \
	_timoni \
	_tkn \
	_tkn-pac \
	tightvncviewer \
	_todoist \
	_tofu \
	tracepath6 \
	_trivy \
	typeset \
	_upctl \
	_uv \
	_vacuum \
	_vela \
	_velero \
	_venom \
	vgcfgbackup \
	vgcfgrestore \
	vgchange \
	vgck \
	vgconvert \
	vgcreate \
	vgdisplay \
	vgexport \
	vgextend \
	vgimport \
	vgmerge \
	vgmknodes \
	vgreduce \
	vgremove \
	vgrename \
	vgs \
	vgscan \
	vgsplit \
	vigr \
	_virtctl \
	_wasmer-headless \
	_watchexec \
	whatis \
	wine-development \
	wine-stable \
	wine64 \
	wine64-development \
	wine64-stable \
	_xc \
	xpovray \
	xvnc4viewer \
	_ytt \
	ypcat \
	_zarf \
	_zitadel \
	_zola

symlinks: $(DATA)
	$(ss) 7z \
		7za \
		7zr \
		7zz \
		7zzs
	$(ss) aclocal \
		aclocal-1.10 aclocal-1.11 aclocal-1.12 aclocal-1.13 \
		aclocal-1.14 aclocal-1.15 aclocal-1.16
	$(ss) ant \
		phing
	$(ss) aptitude \
		aptitude-curses
	$(ss) asciidoc \
		asciidoc.py
	$(ss) automake \
		automake-1.10 automake-1.11 automake-1.12 automake-1.13 \
		automake-1.14 automake-1.15 automake-1.16
	$(ss) autoreconf \
		autoheader
	$(ss) autoscan \
		autoupdate
	$(ss) avahi-browse \
		avahi-browse-domains
	$(ss) btdownloadheadless.py \
		btdownloadcurses.py btdownloadgui.py
	$(ss) bzip2 \
		lbzip2 pbzip2
	$(ss) _cal \
		ncal
	$(ss) cardctl \
		pccardctl
	$(ss) cd \
		pushd
	$(ss) chromium-browser \
		chrome chromium google-chrome google-chrome-stable
	$(ss) complete \
		compgen
	$(ss) convert \
		animate compare composite conjure display identify import \
		mogrify montage stream
	$(ss) cowsay \
		cowthink
	$(ss) declare \
		typeset
	$(ss) dict \
		rdict
	$(ss) dpkg \
		dpkg-deb dpkg-query dpkg-reconfigure
	$(ss) ether-wake \
		etherwake
	$(ss) filesnarf \
		mailsnarf msgsnarf
	$(ss) firefox \
		firefox-esr iceweasel mozilla-firefox
	$(ss) _flamegraph \
		_just \
		_watchexec
	$(ss) fprintd-delete \
		fprintd-list
	$(ss) fprintd-enroll \
		fprintd-verify
	$(ss) freeciv \
		civclient freeciv-gtk2 freeciv-gtk3 freeciv-sdl freeciv-xaw
	$(ss) freeciv-server \
		civserver
	$(ss) _gaiacli \
		_gaiad \
		_ngrok \
		_npm \
		_sopstool \
		_tendermint
	$(ss) gcc \
		c++ cc f77 f95 g++ g++-5 g++-6 g++-7 g++-8 g77 g95 gcc-5 \
		gcc-6 gcc-7 gcc-8 gccgo gccgo-5 gccgo-6 gccgo-7 gccgo-8 gcj \
		gfortran gfortran-5 gfortran-6 gfortran-7 gfortran-8 gpc
	$(ss) genisoimage \
		mkisofs
	$(ss) geoiplookup \
		geoiplookup6
	$(ss) _gh \
		_infracost
	$(ss) gkrellm \
		gkrellm2
	$(ss) _golangci-lint \
		_allero \
		_alp \
		_apko \
		_aqua \
		_arduino-cli \
		_argo \
		_atlas \
		_atmos \
		_bashbot \
		_bosh \
		_buf \
		_caddy \
		_chamber \
		_changie \
		_chezmoi \
		_cilium \
		_cloudquery \
		_clusterctl \
		_cmctl \
		_colima \
		_conform \
		_conftest \
		_constellation \
		_container-structure-test \
		_cosign \
		_crane \
		_crc \
		_crictl \
		_ctlptl \
		_cue \
		_dagger \
		_dapr \
		_dasel \
		_datree \
		_deck \
		_depot \
		_devspace \
		_dlv \
		_docker \
		_driftctl \
		_dyff \
		_esc \
		_flux \
		_furyctl \
		_gardenctl \
		_gcrane \
		_gh-label \
		_ghorg \
		_git-bump \
		_gitconfig \
		_gitleaks \
		_gitsign \
		_glen \
		_glow \
		_go-licenses \
		_gopass \
		_gopherjs \
		_goreleaser \
		_grype \
		_gup \
		_helm \
		_helmfile \
		_hostctl \
		_hugo \
		_imgpkg \
		_incus \
		_ignite \
		_istioctl \
		_jwt \
		_k0sctl \
		_k3d \
		_k3s \
		_k3sup \
		_k6 \
		_k9s \
		_kafkactl \
		_kapp \
		_kconf \
		_kind \
		_kn \
		_ko \
		_kompose \
		_kool \
		_kops \
		_krane \
		_kratos \
		_kubeadm \
		_kube-capacity \
		_kube-linter \
		_kubebuilder \
		_kubecm \
		_kubectl \
		_kubectl-argo-rollouts \
		_kubectl-kuttl \
		_kubescape \
		_kubelogin \
		_kubemqctl \
		_kubesec \
		_kubeshark \
		_kubespy \
		_kustomize \
		_kyverno \
		_lefthook \
		_limactl \
		_linkerd \
		_mattermost \
		_melange \
		_metalctl \
		_minikube \
		_minishift \
		_mise \
		_mmctl \
		_mockery \
		_moldy \
		_multi-gitter \
		_nerdctl \
		_nfpm \
		_notation \
		_nova \
		_oc \
		_odo \
		_okteto \
		_op \
		_opa \
		_oras \
		_ory \
		_pitchfork \
		_pluto \
		_polygon-edge \
		_popeye \
		_pulumi \
		_px \
		_qrpc \
		_random \
		_rclone \
		_regal \
		_regctl \
		_sinker \
		_skaffold \
		_slsa-verifier \
		_spacectl \
		_sshi \
		_ssh-inscribe \
		_steampipe \
		_syft \
		_talhelper \
		_tanzu \
		_tanzu-core \
		_tctl \
		_tfctl \
		_tilt \
		_timoni \
		_tkn \
		_tkn-pac \
		_trivy \
		_upctl \
		_vacuum \
		_vela \
		_velero \
		_venom \
		_virtctl \
		_ytt \
		_zarf \
		_zitadel \
		_zola
	$(ss) gpgv \
		gpgv2
	$(ss) gssdp-discover \
		gssdp-device-sniffer
	$(ss) gzip \
		pigz
	$(ss) hcitool \
		ciptool dfutool hciattach hciconfig l2ping rfcomm sdptool
	$(ss) _hexdump \
		hd
	$(ss) hping2 \
		hping hping3
	$(ss) ifup \
		ifdown ifquery ifstatus
	$(ss) info \
		pinfo
	$(ss) inotifywait \
		inotifywatch fsnotifywait fsnotifywatch
	$(ss) _insmod \
		_insmod.static
	$(ss) iperf \
		iperf3
	$(ss) java \
		javac javadoc
	$(ss) koji \
		arm-koji ppc-koji s390-koji sparc-koji
	$(ss) ldapsearch \
		ldapadd ldapcompare ldapdelete ldapmodify ldapmodrdn \
		ldappasswd ldapwhoami
	$(ss) links \
		links2
	$(ss) lintian \
		lintian-info
	$(ss) lua \
		lua50 lua5.0 lua51 lua5.1 lua52 lua5.2 lua53 lua5.3 lua54 \
		lua5.4
	$(ss) luac \
		luac50 luac5.0 luac51 luac5.1 luac52 luac5.2 luac53 luac5.3 \
		luac54 luac5.4
	$(ss) luseradd \
		lusermod
	$(ss) lvm \
		lvchange lvcreate lvdisplay lvextend lvmdiskscan lvreduce \
		lvremove lvrename lvresize lvs lvscan pvchange pvcreate \
		pvdisplay pvmove pvremove pvs pvscan vgcfgbackup vgcfgrestore \
		vgchange vgck vgconvert vgcreate vgdisplay vgexport vgextend \
		vgimport vgmerge vgmknodes vgreduce vgremove vgrename vgs \
		vgscan vgsplit
	$(ss) lz4 \
		lz4c
	$(ss) lzip \
		clzip pdlzip plzip
	$(ss) make \
		bmake colormake gmake gnumake pmake
	$(ss) man \
		apropos whatis
	$(ss) mcrypt \
		mdecrypt
	$(ss) _mdbook \
		_deno \
		_diesel \
		_dprint \
		_rustic \
		_sentry-cli \
		_starship
	$(ss) mfiutil \
		mrsasutil
	$(ss) mplayer \
		gmplayer kplayer mencoder mplayer2
	$(ss) mutt \
		muttng neomutt
	$(ss) _nox \
		_airflow \
		_ansible \
		_ansible-config \
		_ansible-console \
		_ansible-doc \
		_ansible-galaxy \
		_ansible-inventory \
		_ansible-playbook \
		_ansible-pull \
		_ansible-vault \
		_conda \
		_cz
	$(ss) nslookup \
		host
	$(ss) p4 \
		g4
	$(ss) perl \
		perldoc
	$(ss) pine \
		alpine
	$(ss) ping \
		ping4 ping6
	$(ss) _pip \
		_pip3
	$(ss) _pipenv \
		_black _blackd _flask _httpx
	$(ss) pkg-config \
		pkgconf
if BSD
	$(ss) pkg_delete \
		pkg_deinstall pkg_info
endif
	$(ss) pgrep \
		pkill
	$(ss) pm-hibernate \
		pm-suspend pm-suspend-hybrid
	$(ss) psql \
		createdb createuser dropdb dropuser
	$(ss) postmap \
		postalias
	$(ss) povray \
		spovray xpovray
	$(ss) puppet \
		filebucket puppetca puppetd puppetdoc puppetmasterd puppetqd \
		puppetrun ralsh
	$(ss) pytest \
		py.test py.test-2 py.test-3 pytest-2 pytest-3
	$(ss) pydoc \
		pydoc3
	$(ss) pylint \
		pylint-2 pylint-3
	$(ss) python \
		micropython pypy pypy3 pyston pyston3 python2 python2.7 \
		python3 python3.3  python3.4 python3.5 python3.6 python3.7 \
		python3.8 python3.9 python3.10 python3.11 python3.12 python3.13
	$(ss) pyvenv \
		pyvenv-3.4 pyvenv-3.5 pyvenv-3.6 pyvenv-3.7 pyvenv-3.8 \
		pyvenv-3.9 pyvenv-3.10 pyvenv-3.11 pyvenv-3.12 pyvenv-3.13
	$(ss) qdbus \
		dcop
	$(ss) qemu \
		qemu-kvm qemu-system-i386 qemu-system-x86_64
	$(ss) quota \
		edquota quotacheck quotaoff quotaon repquota setquota
	$(ss) rcs \
		ci co rcsdiff rlog
	$(ss) rpm \
		rpmbuild rpmbuild-md5
	$(ss) rpm2tgz \
		rpm2targz rpm2txz
	$(ss) _ruff \
		_uv
	$(ss) smbclient \
		smbcacls smbcquotas smbget smbpasswd smbtar smbtree
	$(ss) sbcl \
		sbcl-mt
	$(ss) sha256sum \
		b2sum md5sum shasum sha1sum sha224sum sha384sum sha512sum
	$(ss) _sops \
		_kata-runtime _todoist
	$(ss) ssh \
		autossh scp sftp sidedoor slogin
	$(ss) sudo \
		sudoedit
	$(ss) tar \
		bsdtar gtar star
	$(ss) tracepath \
		tracepath6
	$(ss) update-alternatives \
		alternatives
	$(ss) _vault \
		_bao \
		_consul \
		_fx \
		_nomad \
		_packer \
		_terraform \
		_tofu \
		_xc
	$(ss) vipw \
		vigr
	$(ss) vncviewer \
		tightvncviewer xvnc4viewer
	$(ss) _wasmer \
		_wasmer-headless
	$(ss) wine \
		wine-development wine-stable \
		wine64 wine64-development wine64-stable
	$(ss) wodim \
		cdrecord
	$(ss) xz \
		pxz
	$(ss) ypmatch \
		ypcat
.PHONY: symlinks

SETUP_SYMLINKS = $(srcdir)/../setup-symlinks.sh

all-local: ss = $(SETUP_SYMLINKS) .
all-local: symlinks

install-data-hook: ss = $(SETUP_SYMLINKS) $(DESTDIR)$(bashcompdir)
install-data-hook: symlinks

check-local:
	REPLY=0; \
	for file in $(bashcomp_DATA); do \
		$${bashcomp_bash:-$${BASH:-bash}} \
			-O extglob -n $(srcdir)/$$file || REPLY=$$?; \
	done; \
	exit $$REPLY
