static_bashcomp = abook \
		ant \
		apache2ctl \
		apt \
		apt-build \
		aptitude \
		aspell \
		autorpm \
		bash-builtins \
		bind-utils \
		bitkeeper \
		bittorrent \
		bluez \
		brctl \
		bzip2 \
		cardctl \
		cfengine \
		chkconfig \
		chsh \
		cksfv \
		clisp \
		configure \
		coreutils \
		cowsay \
		cpan2dist \
		cpio \
		crontab \
		cups \
		cryptsetup \
		cvs \
		cvsps \
		dd \
		dhclient \
		dict \
		dpkg \
		dselect \
		dsniff \
		findutils \
		freeciv \
		fuse \
		gcc \
		gcl \
		gdb \
		genisoimage \
		gkrellm \
		glibc \
		gnatmake \
		gpg \
		gpg2 \
		gzip \
		heimdal \
		hping2 \
		ifupdown \
		imagemagick \
		info \
		iptables \
		ipmitool \
		ipsec \
		ipv6calc \
		isql \
		jar \
		java \
		k3b \
		kldload \
		larch \
		ldapvi \
		lftp \
		lilo \
		links \
		lintian \
		lisp \
		lrzip \
		lvm \
		lzma \
		lzop \
		mailman \
		make \
		man \
		mc \
		mcrypt \
		mdadm \
		medusa \
		minicom \
		mkinitrd \
		module-init-tools \
		monodevelop \
		mount \
		mplayer \
		msynctool \
		mtx \
		munin-node \
		mutt \
		mysqladmin \
		ncftp \
		net-tools \
		nmap \
		ntpdate \
		openldap \
		openssl \
		p4 \
		pine \
		pkg-config \
		pkg_install \
		pkgtools \
		pm-utils \
		portupgrade \
		postfix \
		postgresql \
		povray \
		procps \
		python \
		qdbus \
		qemu \
		quota-tools \
		rcs \
		rdesktop \
		reportbug \
		resolvconf \
		rfkill \
		ri \
		rpcdebug \
		rpm \
		rpmcheck \
		rrdtool \
		rsync \
		rtcwake \
		samba \
		sbcl \
		screen \
		service \
		shadow \
		sitecopy \
		smartctl \
		snownews \
		sqlite3 \
		ssh \
		sshfs \
		strace \
		svk \
		sysctl \
		sysv-rc \
		tar \
		tcpdump \
		unace \
		unrar \
		update-alternatives \
		util-linux \
		vncviewer \
		vpnc \
		wireless-tools \
		wodim \
		wol \
		wtf \
		wvdial \
		xhost \
		xm \
		xmllint \
		xmlwf \
		xmms \
		xrandr \
		xsltproc \
		xz \
		yp-tools \
		yum-arch

generated_bashcomp = perl

bashcomp_DATA = $(static_bashcomp) $(generated_bashcomp)

perl: perl.in Makefile
	sed -e 's|@helpersdir[@]|$(helpersdir)|' <$(srcdir)/$@.in >$@

EXTRA_DIST = $(bashcomp_DATA) perl.in \
	     _mock _modules _subversion _yum _yum-utils

CLEANFILES = perl

