EXTRA_DIST = \
	conftest.py \
	test_pkgadd.py \
	test_qemu.py \
	test_qrunner.py \
	test_querybts.py \
	test_quotacheck.py \
	test_quotaon.py \
	test_quota.py \
	test_radvdump.py \
	test_rcsdiff.py \
	test_rcs.py \
	test_rdesktop.py \
	test_rdict.py \
	test_readelf.py \
	test_readonly.py \
	test_repomanage.py \
	test_reportbug.py \
	test_reptyr.py \
	test_resolvconf.py \
	test_rfcomm.py \
	test_rfkill.py \
	test_rlog.py \
	test_rmlist.py \
	test_rmmod.py \
	test_rm.py \
	test_route.py \
	test_rpcdebug.py \
	test_rpmbuild.py \
	test_rrdtool.py \
	test_rtcwake.py \
	test_runuser.py \
	test_sbopkg.py \
	test_sdptool.py \
	test_seq.py \
	test_service.py \
	test_set.py \
	test_setquota.py \
	test_sha1sum.py \
	test_shar.py \
	test_sh.py \
	test_sitecopy.py \
	test_slackpkg.py \
	test_smartctl.py \
	test_smbcacls.py \
	test_smbclient.py \
	test_smbcquotas.py \
	test_smbget.py \
	test_smbpasswd.py \
	test_smbtar.py \
	test_smbtree.py \
	test_snownews.py \
	test_sort.py \
	test_spovray.py \
	test_sqlite3.py \
	test_ssh-add.py \
	test_ssh-keygen.py \
	test_sshmitm.py \
	test_sshow.py \
	test_ss.py \
	test_strace.py \
	test_stream.py \
	test_strings.py \
	test_strip.py \
	test_su.py \
	test_svcadm.py \
	test_svk.py \
	test_svnadmin.py \
	test_svnlook.py \
	test_svn.py \
	test_sysbench.py \
	test_tac.py \
	test_tcpdump.py \
	test_tcpkill.py \
	test_tcpnice.py \
	test_tee.py \
	test_texindex.py \
	test_tightvncviewer.py \
	test_timeout.py \
	test_tipc.py \
	test_tracepath.py \
	test_tshark.py \
	test_tune2fs.py \
	test_udevadm.py \
	test_unace.py \
	test_unpack200.py \
	test_unrar.py \
	test_unset.py \
	test_unshunt.py \
	test_update-alternatives.py \
	test_update-rc-d.py \
	test_urlsnarf.py \
	test_uscan.py \
	test_useradd.py \
	test_userdel.py \
	test_usermod.py \
	test_vdir.py \
	test_vgchange.py \
	test_vgcreate.py \
	test_vipw.py \
	test_vmstat.py \
	test_vpnc.py \
	test_watch.py \
	test_webmitm.py \
	test_wget.py \
	test_wodim.py \
	test_write.py \
	test_wsimport.py \
	test_wtf.py \
	test_wvdial.py \
	test_xdg-mime.py \
	test_xdg-settings.py \
	test_xgamma.py \
	test_xmllint.py \
	test_xmlwf.py \
	test_xmms.py \
	test_xmodmap.py \
	test_xm.py \
	test_xpovray.py \
	test_xrandr.py \
	test_xrdb.py \
	test_xsltproc.py \
	test_xxd.py \
	test_xzdec.py \
	test_ypcat.py \
	test_ypmatch.py \
	test_yum-arch.py \
	test_yum.py \
	test_zopflipng.py \

all:
